deployment/k8s/base/istio/preauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peerauthentication-strict
spec:
  mtls:
    mode: STRICT
