deployment/k8s/base/istio/virtualService.yaml
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: lisa

spec:
  hosts:
    - lisa.staging.ndtp.co.uk
  gateways:
    - lisa/lisa-ingress-gateway
  http:
    - headers:
      "@request.auth.claims.groups":
        exact: lisa-access
#    - match:
#        - uri:
#            prefix: /

      rewrite:
        uriRegexRewrite:
          match: ^/(/|$)(.*)
          rewrite: /\2
      route:
        - destination:
            host: lisa
            port:
              number: 80
